CHANGES IN Bioc 3.3
-------------------

BUG FIXES
    o Adapt the runMEME to work with meme 4.10.x version.


CHANGES IN VERSION 1.9.4
------------------------

NEW FEATURES

    o Add conversion from IUPAC string to matrix
    o toPWM, toICM work on PFMatrixList

BUG FIXES
    o Fix the seqLogo error when the frequency of each base is same 
      at certain site. Thanks to Liz.
    o Fix the database interface to deal with the duplicated/missing records 
      for certain TFBS in JASPAR2016.
    o Fix coersion method failure on certain cases.

CHANGES IN VERSION 1.7.2
------------------------

NEW FEATURES

    o New class TFFMFirst and TFFMDetail for next generation TFBSs.
    o Novel TFFM sequence logo.

BUG FIXES

    o Fix the bug in runMEME, which always return positive strand for 
      site sequence.

CHANGES IN VERSION 1.5.0
------------------------

NEW FEATURES

    o searchSeq now works on DNAStringSet. 
      The names in DNAStringSet will be used as seqname in SiteSet.
    o More user-friendly output in data.frame or GRanges from SiteSet, 
      SiteSetList, et al.
    o reverseComplement works on XMatrix now.
    o faster implmentation of searchPairBSgenome