@@ -1,6 +1,6 @@
 Package: TFBSTools
-Version: 1.9.12
-Date: 2016-03-01
+Version: 1.9.15
+Date: 2016-03-31
 Title: Software Package for Transcription Factor Binding Site (TFBS) Analysis
 Description: TFBSTools is a package for the analysis and manipulation of 
              transcription factor binding sites. It includes matrices conversion
