@@ -3,6 +3,8 @@ CHANGES IN Bioc 3.3
 
 BUG FIXES
     o Adapt the runMEME to work with meme 4.10.x version.
+    o Fix the scientific notation in run_MEME
+    o Better error handling of MEME wrappe
 
 
 CHANGES IN VERSION 1.9.4
